# autovirt

./: .gitignore  LICENSE.md  README.md  autovirt.sh  autovirt.toml.dist  config.py.dist  employee.py  innovations.py  main.py  pyproject.toml  repair.py  requirements.txt  salary.py  setup.py  utils.py  virt_urls.py
autovirt/: __init__.py  config.py  exception.py  logger.py  main.py  session.py  structs.py  utils.py
autovirt/action/: employee.py  innovations.py  repair.py  salary.py
autovirt/action/interface/: __init__.py  artefact.py  employee.py  equipment.py  mail.py
autovirt/analytics/action/: daily_changes.py
autovirt/artefact/: __init__.py  renew.py
autovirt/artefact/action/: renew.py
autovirt/artefact/adapter/: __init__.py  api_artefact.py  artefact.py
autovirt/artefact/domain/: __init__.py  artefact.py
autovirt/artefact/interface/: artefact.py
autovirt/domain/: shopboard.py  supplies.py  supply.py
autovirt/employee/: __init__.py  set_demanded_salary.py  set_required_salary.py
autovirt/employee/action/: __init__.py  set_demanded_salary.py  set_required_salary.py
autovirt/employee/adapter/: __init__.py  api_employee.py  employee.py  unit_salary.py
autovirt/employee/domain/: __init__.py  base_unit_salary.py  (+7 more)
autovirt/equipment/: __init__.py  repair.py
autovirt/virtapi/: __init__.py  api_supplies.py  artefact.py  employee.py  equipment.py  mail.py  storage.py
completion/: _autovirt  autovirt-completion.bash
tests/: test_action_employee.py  test_action_repair.py  test_session.py  test_structs.py  test_utils.py  test_virtapi_artefact.py  test_virtapi_equipment.py  test_virtapi_mail.py
tests/analytics/: test_shops_return.py
tests/artefact/: test_artefact_adapter.py
tests/data/: artefacts.json  repair-1529-json-short.txt  shop-supply-summary.json  unit-offers-empty.json  unit-offers.json  units-shops.json  units-to-repair-1528.json  units-to-repair-empty.json
tests/domain/: test_shopboard.py  test_supply.py
tests/equipment/: conftest.py
tests/gateway/: test_adapter.py  test_virtonomica.py
(+94 files in other folders)
