[tool.poetry]
name = "autovirt"
version = "1.3.1"
description = "Virtonomica automation tool"
authors = ["Sergey Sokolov <xlamserg@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
tomli = "^1.2.2"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
mypy = "^0.910"
pytest = "^6.2.5"
types-requests = "^2.25.11"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
autovirt = 'autovirt.main:run'
