[tool.poetry]
name = "autovirt"
version = "1.3.4"
description = "Virtonomica automation tool"
authors = ["Sergey Sokolov <xlamserg@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
tomli = "^2.0.1"
pydantic = "^1.8.2"
pip = "^24.1.2"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
mypy = "^0.982"
pytest = "^7.1.3"
types-requests = "^2.25.11"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
autovirt = 'autovirt.main:run'
