[project]
name = "autovirt"
version = "2.1.0"
description = "Virtonomica automation tool"
readme = "README.md"
license = "MIT"
requires-python = "~=3.13.0"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "pydantic>=2.11.3",
  "requests>=2.32.3",
  "tomli>=2.2.1",
]

scripts.autovirt = "autovirt.main:run"

[dependency-groups]
dev = [
  "black>=25.1",
  "mypy>=1.15",
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1",
  "ruff>=0.11.7",
  "types-requests>=2.32.0.20250328",
]

[tool.setuptools]
packages = [ "autovirt" ]

[tool.uv]
package = true
